--- a/css/tictactoe.css
+++ b/css/tictactoe.css
@@ -59,7 +59,7 @@ h1 {
 
 .end-message {
 	font-size: 26px;
-	color: limegreen;
+	color: white;
 }
 
 .play-again {
@@ -72,6 +72,7 @@ h1 {
 	color: rgba(250, 250, 250, 1);
 	background-color: rgba(50, 50, 50, 1);
 	display: none;
+	outline: none;
 	transition: background-color .5s ease-in-out;
 }
 
@@ -82,16 +83,20 @@ h1 {
 .playerbox {
 	display: inline-block;
 	background-color: rgba(150, 150, 150, .9);
-	width: 280px;
+	width: 340px;
 	height: 400px;
 }
 
-#player1 {
-	margin-right: 50px;
+
+#playerbox1 {
+	position: relative;
+	background-color: rgba(50, 50, 50, 1);
 }
 
-#player2 {
-	margin-left: 50px;
+
+#playerbox2 {
+	position: relative;
+	background-color: rgba(50, 50, 50, 1);
 }
 
 .gameboard {
@@ -115,7 +120,7 @@ h1 {
 	transition: background-color 1s ease-in-out;
 }
 
-.gameboard div: {
+.gameboard div:hover {
 	background-color: limegreen;
 	opacity: .8;
 }
@@ -128,6 +133,49 @@ h1 {
 	border-bottom: 3px solid white;
 }
 
+.player1 {
+	color: white;
+}
+
+.name1 {
+	display: inline-block;
+	position: absolute;
+	left: 10px;
+	top: 10px;
+	color: white;
+	font-family: "lato";
+	font-size: 26px;
+}
+
+.wins1 {
+	display: inline-block;
+	position: absolute;
+	left: 25px;
+	top: 50px;
+	color: white;
+	font-family: "lato";
+	font-size: 26px;
+}
+
+.name2 {
+	display: inline-block;
+	position: absolute;
+	left: 60px;
+	top: 10px;
+	color: white;
+	font-family: "lato";
+	font-size: 26px;
+}
+
+.wins2 {
+	display: inline-block;
+	position: absolute;
+	left: 75px;
+	top: 50px;
+	color: white;
+	font-family: "lato";
+	font-size: 26px;
+}
 
 
 
